# aquastat

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  API.md  API_VERSIONING.md  ARCHITECTURE.md  BACKUP_AND_RESTORE.md  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_PROVENANCE.md  DATA_SOURCES.md  DEPLOYMENT.md  DESKTOP_APP.md  DISTRIBUTION.md  Dockerfile  EVIDENCE_MODEL.md  FORMULAS.md  GITHUB_PAGES.md  LICENSE  METHODOLOGY.md  MODEL_REGISTRY.md  PUBLIC_RECORDS.md  RATE_LIMITS.md  README.md  RELEASING.md  ROADMAP.md  RUNBOOK.md  SCIENTIFIC_METHOD.md  SDK.md  SECURITY.md  SELF_HOSTING.md  SOURCE_CONNECTORS.md  SOURCE_POLICY.md  SUPPORT.md  UNCERTAINTY.md  UPGRADING.md  (+9 more)
.github/: CODEOWNERS  pull_request_template.md
app/: __init__.py  billing_schemas.py  errors.py  facility_schemas.py  logging_config.py  main.py  metrics.py  openapi.py  ops_schemas.py  repository.py  schemas.py  security.py
aquastat_cli/: __init__.py  main.py
aquastat_edge/: Cargo.toml
desktop/: index.html  package-lock.json  package.json  tsconfig.json
docs/: allocation-methods.md  authentication.md  campus-model.md  corrections.md  data-quality.md  data-sources.md  deployment-cloud-run.md  deployment-railway.md  deployment-render.md  distribution.md  duplicate-detection.md  errors.md  facility-registry.md  historical-data.md  implementation-audit.md  ingestion-pipeline.md  organization-model.md  provider-migration.md  rapidapi-listing.md  rate-limits.md  reconciliation.md  research-exports.md  review-process.md  source-provenance.md  (+3 more)
(+117 files in other folders)
